--- a/.gitmodules
+++ b/.gitmodules
@@ -56,3 +56,6 @@
 	path = bundle/ToggleWord
 	url = git://github.com/vim-scripts/toggle_words.vim.git
   ignore = dirty
+[submodule "bundle/syntax-css"]
+	path = bundle/syntax-css
+	url = git://github.com/hail2u/vim-css-syntax.git
