--- a/.gitmodules
+++ b/.gitmodules
@@ -59,3 +59,6 @@
 [submodule "bundle/syntax-css"]
 	path = bundle/syntax-css
 	url = git://github.com/hail2u/vim-css-syntax.git
+[submodule "bundle/syntax-markdown"]
+	path = bundle/syntax-markdown
+	url = git://github.com/tpope/vim-markdown.git
