--- a/.gitmodules
+++ b/.gitmodules
@@ -88,3 +88,7 @@
 [submodule "bundle/ctrlp"]
 	path = bundle/ctrlp
 	url = https://github.com/kien/ctrlp.vim.git
+[submodule "bundle/bufexplorer"]
+	path = bundle/bufexplorer
+	url = https://github.com/aokon/vim-bufexplorer.git
+  ignore = dirty
