reinstalled python-mode plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -95,3 +95,7 @@
 [submodule "bundle/gundo"]
 	path = bundle/gundo
 	url = https://github.com/sjl/gundo.vim.git
+[submodule "bundle/python-mode"]
+	path = bundle/python-mode
+	url = https://github.com/klen/python-mode.git
+  ignore = dirty
